# cpp-club

cmake/: buildtype.cmake  packages.cmake
docs/: 00pybind11.html  01conan.html  02hana.html  03metaprogramming1.html  04templatebasics.html  05designpatterns1.html  06webassembly.html  07concepts.html  08ranges.html
docs/css/: custom.css
talk-00/: readme.org  slides.org
talk-00/project/: CMakeLists.txt  conanfile.txt  pycpp.cxx  test-pybind11.py
talk-00/project/Testing/: CMakeLists.txt  embed.cxx
talk-01/: slides.org
talk-01/project1/: CMakeLists.txt  conanfile.txt  range-test.cpp  readme.org
talk-01/project2/: CMakeLists.txt  conan-test.cpp  readme.org
talk-02/: slides.org
talk-02/project1/: CMakeLists.txt  units.cpp
talk-02/project2/: CMakeLists.txt  event-system.cpp
talk-03/: questions.org  slides.org
talk-04/: slides.org
talk-04/project1/: CMakeLists.txt  enable_if.cpp  enable_if_arg.cpp  enable_if_constexpr.cpp  enable_if_custom.cpp  enable_if_tag.cpp  enable_if_temp.cpp
talk-05/: slides.org
talk-05/project1/: CMakeLists.txt  pubsub.cpp  visitor.cpp
talk-06/: slides.org
talk-06/project1/: CMakeLists.txt  README.md
talk-06/project2/: CMakeLists.txt  main.cpp  wasm_shell.html
talk-07/: slides.org
talk-07/project1/: CMakeLists.txt  main.cxx  test2.cxx  test3.cxx
talk-08/: slides.org
talk-08/project1/: CMakeLists.txt  main.cxx  test.cxx  test2.cxx
talk-11/project/: Dockerfile  Dockerfile.cling
workflow/: Dockerfile  docker-compose.yml
